@@ -1,3 +1,12 @@
+New in master
+=============
+
+Features
+--------
+
+* Add a ``--timeout`` parameter to the ``check`` plugin, defaulting to
+  30s. (Issue #3643)
+
 New in v8.2.3
 =============
 
